Resources/pipeline-pioneers-db.yml
apiVersion: v1
kind: Pod
metadata:
  name: pipeline-db
  namespace: pipeline-pioneers
  labels:
    app: pipeline-postgres
spec:
  containers:
    - name: postgres-container
      image: zachburnett/postges-pipline-pioneers 
      ports: 
        - containerPort: 5432
      volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
  volumes:
    - name: db-data
      awsElasticBlockStore:
        volumeID: "vol-0588f9f5be435903c"
        fsType: ext4
