Resources/pipeline-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-db-service
  namespace: pipeline-pioneers
  labels: 
    app: pipeline-postgres
spec:
  type: ClusterIP
  selector:
    app: pipeline-postgres
  ports: 
  - port: 5432
    targetPort: 5432
