Resources/ingress.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: pipeline-ingress 
  namespace: pipeline-pioneers
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec: 
  rules: 
    - http:
        paths: 
        - pathType: Prefix
          path: "/pipeline/(.*)"
          backend: 
            service: 
              name: pipeline-pioneers-lb
              port: 
                number: 7500
